new added few change

--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
                         <h6 class="title-primary">about Tamplate</h6>
                         <h1>a rich featured, epic & premium work.</h1>
                     </div>
-                    <p>Suspendisse facilisis commodo lobortis. Nullam mollis lobortis ex vel faucibus. Proin nec viverra
-                        turpis. Nulla eget justo scelerisque, pretium purus vel, congue libero. Suspendisse potenti.
+                    <p>Suspendisse jahsu ajsh commodo lobortis. ajshdiwau mollis lobortis ex vel kashxuhsj. Proin nec ahsjaos
+                        turpis. jieis eget justo scelerisque, pretium purus vel, congue libero. Suspendisse asnasnbuia 
                     </p>
                     <h5>Web Design & Development</h5>
                     <ul class="list-unstyled">
